# subc

./: .dockerignore  Cargo.toml  Dockerfile  README.md
clash/: config.toml  config.yaml  groups.toml  rulesets.toml
clash/conf/: config.yaml
clash/rules/: direct.txt
default/conf/: groups.toml
default/rules/: cn_cidr.txt  force-proxy.txt  gfw.txt  openai.txt  proxy.txt
rules/: update.sh
src/: decode.rs  handler.rs  lib.rs  main.rs  request_middleware.rs  route.rs  structs.rs  utils.rs
src/service/: clash.rs
