[package]
name = "subc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.2"
base64 = "0.21.5"
bytes = "1.5.0"
dotenvy = "0.15.7"
futures-util = "0.3.29"
http = "0.2.9"
http-body = "0.4.5"
hyper = "0.14.27"
rand = "0.8.5"
regex = "1.10.2"
reqwest = "0.11.22"
serde = { version = "1.0.189", features = ["serde_derive"] }
serde_json = "1.0.107"
serde_yaml = "0.9.27"
tokio = { version = "1.33.0", features = ["full"] }
tokio-http = "0.0.0"
tokio-util = "0.7.10"
toml = "0.8.8"
tower = "0.4.13"
tower-http = { version = "0.4.4", features = ["compression-gzip"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.17"
urlencoding = "2.1.3"
